fixed centered triangle issue on smaller laptops

--- a/css/style.css
+++ b/css/style.css
@@ -149,19 +149,52 @@ body {
 
 /* BG TRIANGLES */
 .content-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   overflow: hidden;
-  height: 100vh;
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 
 .triangle {
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%); 
+  width: 90%; 
+  min-height: 90%; 
   z-index: -1;
-  width: 0;
-  height: 0;
+  pointer-events: none;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .triangleLeft {
+  background-image: url("../img/BgTri_Left.webp");
+  background-position: left center;
+  left: -280px;
+}
+
+.triangleRight {
+  background-image: url("../img/BgTri_Right.webp");
+  background-position: right center;
+  right: -280px;
+}
+
+
+
+/* .triangle {
+  position: absolute;
+  z-index: -1;
+  width: 0;
+  height: 0;
+} */
+
+
+
+/* .triangleLeft {
   width: 900px;
   height: 900px;
   background-image: url("../img/BgTri_Left.webp");
@@ -179,7 +212,7 @@ body {
   background-repeat: no-repeat;
   top: 85px;
   right: -100px;
-}
+}  */
 
 /* BG ORANGE TRIANGLE FOR OTHER PAGES */
 
